# pyJac

fortran/: CMakeLists.txt  pyjac_mod.f90  test_pyjac.f90
fortran/h2_elte/: chem_utils.c  dydt.c  mass_mole.c  mechanism.h  pyjac_mod.f90  rxn_rates.c  rxn_rates_pres_mod.c  spec_rates.c
fortran/h2_he_li/: chem_utils.c  dydt.c  jacob.c  mass_mole.c  mechanism.h  rxn_rates.c  spec_rates.c
h2_elte/: h2_elte.mech  h2_elte.therm  jacob.c
h2_he_li/: mechanism.c  rxn_rates_pres_mod.c
